--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "draft-js": "^0.11.7",
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "firebase": "9.12.1",
     "flickr-justified-gallery": "^2.2.0",
     "fslightbox-react": "^1.7.6",
     "get-age": "^1.0.1",
