--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "9.12.1",
     "flickr-justified-gallery": "^2.2.0",
+    "fs": "^0.0.1-security",
     "fslightbox-react": "^1.7.6",
     "get-age": "^1.0.1",
     "html-to-image": "^1.11.11",
@@ -62,12 +63,14 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.3.0",
     "react-router-dom": "^5.3.4",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.5.13",
     "react-transition-group": "^4.4.5",
     "react-tweet": "^3.2.1",
     "reactour": "^1.19.4",
     "redux": "^4.2.1",
+    "sitemap": "^8.0.0",
     "styled-components": "^4.0.0",
     "sweetalert2": "^11.12.1",
     "uuid": "^10.0.0",
