--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "sweetalert2": "^11.12.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
+    "webrtc-adapter": "^9.0.1",
     "yarn": "^1.22.22"
   },
   "scripts": {
