--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "chart.js": "^4.4.8",
     "detectincognitojs": "^1.3.5",
     "draft-js": "^0.11.7",
     "draft-js-import-html": "^1.4.1",
@@ -42,6 +43,7 @@
     "qr-scanner": "^1.4.2",
     "re-resizable": "^6.9.17",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.1.0",
     "react-countup": "^6.5.3",
@@ -62,7 +64,6 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.3.0",
     "react-router-dom": "^5.3.4",
-    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.5.13",
     "react-transition-group": "^4.4.5",
