update web content for future

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KorKao WebApp",
-  "name": "KorKao WebApp",
+  "short_name": "Kaofrang Space WebApp",
+  "name": "Kaofrang Space WebApp",
   "icons": [
     {
       "src": "https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp",
