--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Kaofrang Space WebApp",
   "icons": [
     {
-      "src": "https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp",
+      "src": "https://d1ygujs1u54o16.cloudfront.net/kf/korfranglogo.webp",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp",
+      "src": "https://d1ygujs1u54o16.cloudfront.net/kf/korfranglogo.webp",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp",
+      "src": "https://d1ygujs1u54o16.cloudfront.net/kf/korfranglogo.webp",
       "type": "image/png",
       "sizes": "512x512"
     }
