--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_APIE=https://cpxdevweb.azurewebsites.net
+REACT_APP_APIE=https://cpxdevweb.koyeb.app
 REACT_APP_APIE_2=https://cpxdevweb.koyeb.app
 GENERATE_SOURCEMAP=false
